# std-async-algorithms

./: CMakeLists.txt  NOTES.md  README.md
.github/workflows/: test.yml
include/stdalgos/: algorithm.hpp  execution_properties.hpp
include/stdalgos/detail/: for_each.hpp  merge.hpp
spack/: repo.yaml
tests/: for_each.cpp  merge.cpp  test1.cpp
